@@ -2,26 +2,26 @@ package com.jetbrains.youtrack.db.internal.core.sql.executor;
 
 import static com.jetbrains.youtrack.db.internal.core.sql.executor.ExecutionPlanPrintUtils.printExecutionPlan;
 
+import com.jetbrains.youtrack.db.api.DatabaseSession;
+import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
+import com.jetbrains.youtrack.db.api.exception.CommandExecutionException;
 import com.jetbrains.youtrack.db.api.query.ExecutionPlan;
 import com.jetbrains.youtrack.db.api.query.ExecutionStep;
 import com.jetbrains.youtrack.db.api.query.Result;
 import com.jetbrains.youtrack.db.api.query.ResultSet;
-import com.jetbrains.youtrack.db.internal.DbTestBase;
-import com.jetbrains.youtrack.db.internal.common.concur.TimeoutException;
-import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
-import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
-import com.jetbrains.youtrack.db.api.DatabaseSession;
+import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
-import com.jetbrains.youtrack.db.api.exception.CommandExecutionException;
 import com.jetbrains.youtrack.db.api.record.RID;
-import com.jetbrains.youtrack.db.internal.core.id.RecordId;
+import com.jetbrains.youtrack.db.api.record.Record;
+import com.jetbrains.youtrack.db.api.record.Vertex;
 import com.jetbrains.youtrack.db.api.schema.Property;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
 import com.jetbrains.youtrack.db.api.schema.Schema;
 import com.jetbrains.youtrack.db.api.schema.SchemaClass;
-import com.jetbrains.youtrack.db.api.record.Entity;
-import com.jetbrains.youtrack.db.api.record.Record;
-import com.jetbrains.youtrack.db.api.record.Vertex;
+import com.jetbrains.youtrack.db.internal.DbTestBase;
+import com.jetbrains.youtrack.db.internal.common.concur.TimeoutException;
+import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
+import com.jetbrains.youtrack.db.internal.core.id.RecordId;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import com.jetbrains.youtrack.db.internal.core.sql.SQLEngine;
 import com.jetbrains.youtrack.db.internal.core.sql.functions.SQLFunction;
@@ -1121,7 +1121,7 @@ public class SelectStatementExecutionTest extends DbTestBase {
   public void testFetchFromSingleRid3() {
     db.begin();
     EntityImpl document = (EntityImpl) db.newEntity();
-    document.save(db.getClusterNameById(0));
+    document.save();
     db.commit();
 
     ResultSet result = db.query("select from [#0:1, #0:2]");
@@ -1138,7 +1138,7 @@ public class SelectStatementExecutionTest extends DbTestBase {
   public void testFetchFromSingleRid4() {
     db.begin();
     EntityImpl document = (EntityImpl) db.newEntity();
-    document.save(db.getClusterNameById(0));
+    document.save();
     db.commit();
 
     ResultSet result = db.query("select from [#0:1, #0:2, #0:100000]");
@@ -1823,7 +1823,7 @@ public class SelectStatementExecutionTest extends DbTestBase {
     Assert.assertFalse(result.hasNext());
     SelectExecutionPlan plan = (SelectExecutionPlan) result.getExecutionPlan().get();
     Assert.assertEquals(
-        FetchFromClassExecutionStep.class, plan.getSteps().get(0).getClass()); // index not used
+        FetchFromIndexStep.class, plan.getSteps().getFirst().getClass()); // index not used
     result.close();
   }
 
